# pyri-example-browser

./: README.md  pyproject.toml
src/pyri_example_browser/components/: example_component.html  example_component.py  example_components.py
src/pyri_example_browser/panels/: example_panels.py
